# soda

./: .gitignore  PROVIDER_DESIGN.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: claude.rs  codex.rs  crush.rs  forgecode.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs
src/components/: AgentDetail.tsx  Agents.tsx  ConfirmDialog.tsx  GatewayGuide.tsx  GatewayManagement.tsx  Kits.tsx  LanguageSwitcher.tsx  ProviderManagement.tsx  SettingsModal.tsx  Sidebar.tsx  SkillDetail.tsx  SkillsStore.tsx  TerminalWorkspace.tsx  ThemeProvider.tsx
src/components/ui/: Select.tsx
src/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt-BR.json  zh-CN.json
src/types/: agent.ts  react-syntax-highlighter.d.ts  skill.ts
