[package]
name = "soda"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "soda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
dirs = "6"
zip = "2"
toml = "0.8"
regex-lite = "0.1"
serde_yaml = "0.9"
once_cell = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
